[gd_scene load_steps=7 format=3 uid="uid://ch1v6iuqbho2c"]

[ext_resource type="Script" path="res://scenes/UI/node_2d.gd" id="1_gcb2d"]
[ext_resource type="Texture2D" uid="uid://ch3lvstdcaeww" path="res://Textures/UI/Start menu.png" id="2_x3wc7"]
[ext_resource type="Texture2D" uid="uid://b06frotyrc5ql" path="res://Textures/UI/Играть.png" id="3_23alw"]
[ext_resource type="Texture2D" uid="uid://wckyotalm7u3" path="res://Textures/UI/Титры.png" id="4_yya2k"]
[ext_resource type="Texture2D" uid="uid://bhoh613t2apgw" path="res://Textures/UI/ВЫйти.png" id="5_6nrqe"]
[ext_resource type="AudioStream" uid="uid://cvrmrdidio6fs" path="res://Music/Sortser_Menu_Theme_START.mp3" id="6_r72rt"]

[node name="MenuStart" type="Node2D"]
script = ExtResource("1_gcb2d")

[node name="Panel" type="Panel" parent="."]
offset_right = 1152.0
offset_bottom = 648.0

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("2_x3wc7")
expand_mode = 1

[node name="Start" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -107.0
offset_right = 309.0
offset_bottom = -35.0
grow_vertical = 2
texture_normal = ExtResource("3_23alw")

[node name="Credits" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 72.0
offset_top = -36.0
offset_right = 325.0
offset_bottom = 36.0
grow_vertical = 2
texture_normal = ExtResource("4_yya2k")

[node name="Quit" type="TextureButton" parent="Panel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = 53.0
offset_right = 309.0
offset_bottom = 125.0
grow_vertical = 2
texture_normal = ExtResource("5_6nrqe")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_r72rt")
volume_db = -8.432
autoplay = true
parameters/looping = true

[node name="Label" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 828.0
offset_top = 564.0
offset_right = 1128.0
offset_bottom = 623.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 46
text = "Вы прошли игру"

[connection signal="pressed" from="Panel/Start" to="." method="Start_button"]
[connection signal="pressed" from="Panel/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Panel/Quit" to="." method="_on_quit_pressed"]
